[tool.poetry]
name = "hypermedicus"
version = "0.1.0"
description = ""
authors = ["SynergyAI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
psycopg2 = "^2.9.10"
pytest = "^8.3.3"
httpx = "^0.27.2"
trio = "^0.27.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
pytest-mock = "^3.14.0"
pandas = "^2.2.3"
pyjwt = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
